# phoenix-rtos-doc

./: .gitignore  .markdownlint.yaml  Makefile  README  README.md  architecture.md  build_pdf.py  coding.md  conf.py  index.md  introduction.md  port_list_from_json.py  prepare_venv.py  requirements.txt  version_management.py
.github/: lint.yml
_static/: phoenix_dark_style.py
_templates/: LICENSE  breadcrumbs.html  layout.html  page.html  versions.html
architecture/: DESIGN.md  OUTDATED.md  UNDOCUMENTED.md  architecture.md  index.md
building/: DESIGN.md  OUTDATED.md  README.md  UNDOCUMENTED.md  advanced.md  building.md  docker.md  index.md  linux.md  project.md  script.md  shared-libs.md  toolchain.md  windows.md
coding/: coding.md  conf.py  index.md  misracprofile.md  misracprofile.rst
corelibs/: DESIGN.md  OUTDATED.md  README.md  UNDOCUMENTED.md  corelibs.md  index.md  libcache.md  libcgi.md  libgraph.md  libswdg.md  libuuid.md  libvga.md  libvirtio.md
debugging/: index.md
devices/: DESIGN.md  OUTDATED.md  README.md  UNDOCUMENTED.md  devices.md  hwaccess.md  index.md  interface.md  interrupts.md  libsdio.md  simsensors.md
docsresources/: pyproject.toml
docsresources/phoenixsystems/docsresources/: __init__.py  atendofbody.tex  latex.py  maketitle.tex  preamble.tex
docsresources/phoenixsystems_docsresources.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
filesystems/: DESIGN.md  OUTDATED.md  README.md  UNDOCUMENTED.md  filesystems.md  index.md
hostutils/: DESIGN.md  OUTDATED.md  README.md  UNDOCUMENTED.md  hosttools.md  hostutils.md  index.md  (+3 more)
(+1335 files in other folders)
