[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenixsystems-docsresources"
version = "1.0"
requires-python = ">=3.9"

[tool.setuptools.package-data]
"phoenixsystems.docsresources" = ["*.tex", "*.png", "*.jpg", "*.jpeg", "*.gif", "*.svg"]
